[#54] - DummyDataLoader가 SQL 파일을 읽어오도록 리팩토링
- DummyDataLoader 클래스에 하드코딩되어 있던 SQL 쿼리들을 별도의 .sql 파일로 분리하여 가독성과 유지보수성을 향상했습니다.
- 모든 SQL INSERT 구문을 src/main/resources/testdata/ 디렉토리의 개별 .sql 파일로 이동시켰습니다.
- DummyDataLoader 가 서버 실행 시 해당 SQL 파일들을 읽어와 데이터베이스를 초기화하도록 수정했습니다.
- 더 이상 사용되지 않는 하드코딩된 SQL 문자열을 제거했습니다.